assets/css/style.css
/*GENERAL/////////////////////////////////////////////////////////*/
@import url('https://fontlibrary.org/face/hk-grotesk');
@import url('https://fontlibrary.org/face/hkgrotesklight');

.shortcut{
    width:30px;
    height: auto;
}

body {    
    font-family: 'HKGroteskLight', sans-serif;
    font-weight: normal;
    font-style: normal; 
    overflow-x: hidden;
}

h2{
    font-family: 'HKGroteskRegular', sans-serif;
	font-weight: bold;
    margin-top: 50px;
}

hr{
    border: 2px solid #292828;
    border-radius: 2px;
    margin-top: 0;
    margin-bottom: 30px;
}

.section-padding{
	margin-top: 80px; 
	justify-content: center;
	align-items: center;
}

/*NAVBAR/////////////////////////////////////////////////////////*/
.navbar{
    background-color: #E03E52;
    z-index: 2;
}

.navbar-brand img{
	height: 60px;	    
    width: auto;
}

.nav-link{
    color:white;
}

.nav-link:hover{
    font-weight: bold;
    color: #226168;
}
/*HERO/////////////////////////////////////////////////////////*/
.hero{
	height: 100vh;
	
	/* Flexbox things */
	display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
	color: white;
	
	/* Background styles */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("Hero1.jpg");
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;	
}

.hero h1{
    font-size: 5em;
    text-shadow:2px 2px #333;
    letter-spacing: 20px;
}

/*MEMBERS/////////////////////////////////////////////////////////*/
.memberBoxImage {
    position: relative;	
	margin:  0 auto;
}

.memberBoxImage img{
    position: absolute;
    top:0;
    left:0;
    
}

.memberImgFormal {
    z-index: 1;
}

.memberImgInformal {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    visibility: hidden; 
}

.memberBoxImage:hover .memberImgFormal {
  visibility: hidden;
}

.memberBoxImage:hover .memberImgInformal {
  visibility: visible;
}

.memberBoxDescription{
    margin-top: 210px;
    margin-right: 50px;
}

.memberName{
    font-weight: bold;
}


/*SPONSORSHIP/////////////////////////////////////////////////////////*/
.section-sponsorship img{
    width: auto;
}

.sponsors img{
    height: 40px;
    padding-left: auto;
    margin-top: 30px;
}

.sponsors{
    margin-top: 250px;
}


/*CONTACT US/////////////////////////////////////////////////////////*/
#contactus .btn{
    background-color: #226168;
    border: 0;
    border-radius: 20px;
}


/*PORTFOLIO/////////////////////////////////////////////////////////*/
.littleimg{
    cursor: pointer;
    transition: 0.3s;
    width: auto;
    height: 285px;
}

.littleimg:hover{
    opacity: 0.8;
}

/*
.close {
    position: relative;

    color: #f1f1f1;
    font-size: 60px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #E03E52;
}
*/

.lightbox {
	/** Default lightbox to hidden */
	display: none;

	/** Position and style */
	position: fixed;
	z-index: 999;
	width: 100%;
	height: 100%;
	text-align: center;
    justify-content: center;
	align-items: center;
	top: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
}

.lightbox img {
	/** Pad the lightbox image */
	max-width: 90%;
	max-height: 80%;
	margin-top: 5%;
}

.lightbox:target {
	/** Remove default browser outline */
	outline: none;

	/** Unhide lightbox **/
	display: block;
}

#oursolution img{    
    height: 50%;
	width: auto;
}

